      conary.
    * You can now delete troves, update from changesets, and update with a
      full version specified without an installLabelPath set. (CNY-281)
    * The "conary rm" command has been added as an alias for the
      "conary remove" command. (CNY-952)
    * Conary now produces an error message when an invalid context is
      specified. (CNY-890)

  o Build (cvc) Changes:
    * When building a group, if you turn the last byDefault True component
      to byDefault False, for a package, that will turn the package itself
      byDefault False.  This avoids installing empty shells of packages
      on the system. (CNY-774)
    * Java files in which cvc fails to discover any provided or required
      interfaces (for example, due to EAR dependencies) previously caused
      a traceback, but no longer does. (CNY-964)

  o Bug Fixes:
    * Fixed a bug triggered when a critical update of a trove depended on 
      an erase.
    * A bug that caused changesets to be invalidated from the
      changeset cache when signatures were not modified by
      setTroveSigs() has been fixed.
    * A bug that caused an Internal Server Error (ISE) when attempting
      to browse the files in a shadowed component via the Conary
      repository browser has been fixed. (CNY-926)
    * A bug introduced 1.0.32 that affected the ability to update two troves
      due to the same broken dependency with resolveLevel 2 has been fixed.
      This bug affected the ability to simply run "conary update conary" when 
      conary-build and conary-repository will both installed. (CNY-949)
    * Conary will now display config lines that are equivalent to the default
      configuration value but are set explicitly by the user. (CNY-959)
    * includeConfigFile within a context will now include the file also
      within that context. (CNY-622)
    * A memory leak in conary.lib.misc.depSplit() has been fixed.

Changes in 1.0.33:
  o Client Changes: